@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020210221"
-#define public MagickPackageReleaseDate "snapshot-20210221"
+#define public MagickPackageVersionAddendum ".020210222"
+#define public MagickPackageReleaseDate "snapshot-20210222"
